# knapsack_distribution

./: LICENSE  README.md  knapsack_cls.py  main.py  pyproject.toml
examples/: decision_problem.py  optimisation_problem.py
src/knapsack_distribution/: __init__.py  _version.py  knapsack_instance.py  knapsack_item.py  problem_type.py
src/knapsack_distribution.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: knapsack_cls_test.py  test_knapsack_instance.py  test_knapsack_item.py
